--- a/PemrogWeb_FinalProject/cobaa.html
+++ b/PemrogWeb_FinalProject/cobaa.html
@@ -9,7 +9,9 @@
 <body>
     <div class="header">
         <div class="logo">
-            <img src="logo.png" alt="Logo" width="150">
+            <a href="#">
+                <img src="logo.png" alt="Logo" width="150">
+            </a>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Cari...">
@@ -32,14 +34,46 @@
         <a href="#">Home </a> 
         <a href="#">Shop </a> 
         <a href="#">Products </a>  
-        <a href="#">About Us </a> 
+        <a href="AboutUs.html">About Us </a>
         <a href="#">Contacts </a> 
     </div>
     <div class="content">
         <!-- Konten halaman -->
     </div>
     <div class="footer">
-        <p>&copy; 2024 Nama Perusahaan. Hak Cipta Dilindungi.</p>
+        <div class="footer-left">
+            <div class="footer-logo">
+                <img src="logo.png" alt="Logo">
+            </div>
+            <div>
+                <p>Email: example@example.com</p>
+                <p>Alamat: Jalan Contoh No. 123</p>
+                <p>Nomor HP: 08123456789</p>
+            </div>
+        </div>
+        
+        <div class="footer-center">
+            <div class="useful-links">
+                <h4>Useful Links</h4>
+                <a href="#">About Us</a>
+                <a href="#">Contact Us</a>
+                <a href="#">Blog</a>
+            </div>
+            <div class="idea-advice">
+                <h4>Idea & Advice</h4>
+                <a href="#">Reviews</a>
+                <a href="#">Get Design Help</a>
+                <a href="#">Material Care</a>
+            </div>
+        </div>
+
+        <div class="footer-right">
+            <div class="payment-methods">
+                <h4>Payments Method</h4>
+                <img src="pay.png" alt="pay">
+                <!-- Tambahkan logo bank lainnya di sini -->
+            </div>
+        </div>
     </div>
 </body>
 </html>
